{{$NEXT}}

0.003     2015-10-11 03:18:15 EDT
  - Fix loose version check so that version tuples with underscores are
    correctly disallowed

0.002     2015-09-12 20:10:22 EDT
  - Use Getopt::Long::Modern
  - Add warning when version is rewritten to a lower version

0.001     2015-09-02 18:38:57 EDT
  - First release