@@ -39,6 +39,7 @@
       "runtime" : {
          "requires" : {
             "Carp" : "0",
+            "Class::Tiny::Chained" : "0",
             "Getopt::Long::Modern" : "0",
             "Path::Iterator::Rule" : "0",
             "Path::Tiny" : "0.060",
