@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use Class::Tiny::Chained
 
 0.003     2015-10-11 03:18:15 EDT
   - Fix loose version check so that version tuples with underscores are
